# ml-en-assessment

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  experiment.ipynb  input_source_3.py  pyproject.toml  specifications.yaml
notebooks/: experiment.ipynb
task_scripts/: input_source_1.py  input_source_2.py
vanilla_steel/: __main__.py  version.py
vanilla_steel/config/: __init__.py  logger.py  settings.py
vanilla_steel/core/: __main__.py  plugin.py  task_organizer.py  task_specification.py
vanilla_steel/core/agent/: agent_manager.py
vanilla_steel/core/alert/: alert_manager.py
vanilla_steel/core/artifact/: artifact_manager.py
vanilla_steel/core/organization/: organization_manager.py
vanilla_steel/core/workflow/: workflow_manager.py
vanilla_steel/dashboard/: __main__.py
vanilla_steel/database/: base.py  models.py  queries.py
vanilla_steel/docs/: __main__.py  conf.py  index.rst
vanilla_steel/docs/_diagrams/: architecture.puml  sequence.puml
vanilla_steel/docs/pages/: architecture.rst  directory_structure.rst  problem_statement.rst
vanilla_steel/llm/: __main__.py  categorizer.py  llm.py  prompt.py
vanilla_steel/managers/authentication/: authentication_manager.py
vanilla_steel/managers/job/: job_manager.py
vanilla_steel/managers/logging/: logging_manager.py
vanilla_steel/managers/order/: order_manager.py
vanilla_steel/managers/payment/: payment_manager.py
vanilla_steel/modeling/: categorizer.py  llm.py  prompt.py  timeit.py
vanilla_steel/task_organizer/: input_source_1.py  input_source_2.py  input_source_3.py  task_organizer.py
vanilla_steel/tests/: examples.py
(+2 files in other folders)
