[tool.poetry]
name = "vanilla-steel"
version = "0.1.0"
description = "A tool to collate all resources into a single dataset"
authors = ["praveer kumar <praveerkumar17@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "vanilla_steel", from = "." },
]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
tqdm = "^4.66.5"
watchdog = "^4.0.2"
streamlit = "^1.37.1"
altair = "^5.4.0"
pyarrow = "^17.0.0"
pyyaml = "^6.0.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.docs.dependencies]
recommonmark = "^0.7.1"
watchdog = "^4.0.2"
sphinxcontrib-plantuml = "^0.30"
furo = "^2024.8.6"

[tool.poetry.scripts]
version = "vanilla_steel.version:show_version"
dashboard = "vanilla_steel.dashboard.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
